[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/components/Global/Helpers/PauseScreen.gd" type="Script" id=1]
[ext_resource path="res://src/components/Global/Themes/GEPixelTheme.tres" type="Theme" id=2]

[node name="PauseScreen" type="CanvasLayer"]
pause_mode = 2
layer = 4
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
anchor_bottom = 1.0
margin_left = 40.0
margin_top = 150.0
margin_right = 208.0

[node name="NewGame" type="LinkButton" parent="Control/VBoxContainer"]
margin_right = 168.0
margin_bottom = 18.0
action_mode = 0
text = "New Game"
underline = 2

[node name="RestartLvl" type="LinkButton" parent="Control/VBoxContainer"]
margin_top = 22.0
margin_right = 168.0
margin_bottom = 40.0
shortcut_in_tooltip = false
action_mode = 0
text = "Restart Current Level"
underline = 2

[node name="Quit" type="LinkButton" parent="Control/VBoxContainer"]
margin_top = 44.0
margin_right = 168.0
margin_bottom = 62.0
shortcut_in_tooltip = false
action_mode = 0
text = "Quit to Desktop"
underline = 2
[connection signal="pressed" from="Control/VBoxContainer/NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/RestartLvl" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
